<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/res_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/res_cover"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:contentDescription=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/imageView3"
            app:srcCompat="@color/NIBMGPA_transparent_black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtNIBM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0.6"
            android:text="@string/nibm"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/imageView5"
            app:layout_constraintRight_toRightOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.102"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/gpac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/gc"
            android:textColor="@color/NIBMGPA_yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNIBM"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/about"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription=""
            android:scaleType="fitEnd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_info"
            tools:ignore="ContentDescription,RtlHardcoded"
            android:layout_marginStart="8dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/calculateLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/calculateLayout"
            app:srcCompat="@drawable/down_cover"
            tools:ignore="ContentDescription,NotSibling" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/calculateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UselessLeaf">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/NIBMGPA_yellow"
                        android:gravity="center"
                        android:text="@string/computing"
                        android:textAlignment="center"
                        android:textColor="@color/NIBMGPA"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/dcsd15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@android:color/transparent"
                                android:text="@string/dcsd15"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle" />

                            <Button
                                android:id="@+id/dcsd161"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:text="@string/dcsd161"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle,InefficientWeight" />

                            <Button
                                android:id="@+id/dcsd162"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:text="@string/dcsd162"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle,InefficientWeight" />

                            <Button
                                android:id="@+id/dcsd_dse_171"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:background="@android:color/transparent"
                                android:text="@string/dcsd_dse"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle,RtlHardcoded" />

                            <Button
                                android:id="@+id/hdcbis162"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@android:color/transparent"
                                android:text="@string/hdc162"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle,RtlHardcoded" />

                            <Button
                                android:id="@+id/hdcbis171"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="10dp"
                                android:background="@android:color/transparent"
                                android:text="@string/hdc171"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle,RtlHardcoded" />

                        </LinearLayout>
                    </HorizontalScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/NIBMGPA_yellow"
                        android:gravity="center"
                        android:text="@string/management"
                        android:textAlignment="center"
                        android:textColor="@color/NIBMGPA"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/adbm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@android:color/transparent"
                                android:text="@string/adbm"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle" />

                            <Button
                                android:id="@+id/hdbm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:background="@android:color/transparent"
                                android:text="@string/hdb"
                                android:textColor="@color/NIBMGPA_yellow"
                                android:textStyle="bold"
                                tools:ignore="ButtonStyle" />
                        </LinearLayout>
                    </HorizontalScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/NIBMGPA_yellow"
                        android:gravity="center"
                        android:text="@string/custom"
                        android:textAlignment="center"
                        android:textColor="@color/NIBMGPA"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/customSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@color/NIBMGPA_yellow"
                            android:entries="@array/customFields" />

                        <Button
                            android:id="@+id/custom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@android:color/transparent"
                            android:text="@string/go"
                            android:textColor="@color/NIBMGPA_yellow"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
